# labelroi

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/labelroi/: __init__.py  labelroi.py
