[project]
name = "labelroi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Talmo Pereira", email = "talmo@talmolab.org" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.2",
    "qtpy>=2.4.3",
    "shapely>=2.1.1",
    "sleap-io>=0.4.1",
]

[project.scripts]
labelroi = "labelroi.labelroi:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
